# yt-assistant

./: .dockerignore  .gitignore  docker-compose.yml  init.sh
docs/: README.md  db_schema.puml
scripts/: alembic_migrate.sh  init.sh
scripts/utils/: install_local_deps.sh  source_env_vars.sh
yt_assistant_api/: Dockerfile.api.local  config.py  main.py  pyproject.toml  requirements.txt
yt_assistant_api/alembic/: env.py
yt_assistant_api/alembic/versions/: 1dfaa25b61b4_create_transcript_model.py  25962296677d_create_video_and_account_video_models.py  435fc4786b00_video_title_not_null.py  a5bc79415050_create_account_model.py  acebbd6d2836_create_summary_model.py
yt_assistant_api/api/: router.py
yt_assistant_api/api/routes/: account.py  summary.py  transcript.py  video.py
yt_assistant_api/core/: __init__.py  auth.py  constants.py  db_session.py  logger.py  validation.py
yt_assistant_api/crud/: __init__.py  account.py  summary.py  transcript.py  video.py
yt_assistant_api/models/: __init__.py  account.py  accout_video.py  summary.py  transcript.py  video.py
yt_assistant_api/schemas/: __init__.py  account.py  summary.py  transcript.py  video.py
yt_assistant_api/services/: __init__.py  summary.py  video.py  youtube.py
yt_assistant_api/tests/: conftest.py
yt_assistant_api/tests/data/: account.py  data.py
yt_assistant_api/tests/routes/: test_account.py  test_account_handler.py  test_summary_handler.py  test_transcript.py  test_video.py  test_video_handler.py  test_videos.py
yt_assistant_api/tests/services/: test_summary_service.py  test_youtube.py
yt_assistant_client/: Dockerfile.client.dev  Dockerfile.client.local  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
yt_assistant_client/src/: App.test.tsx  App.tsx  index.css  main.tsx  tailwind.config.ts
yt_assistant_client/src/api/: account.test.ts  account.ts  apiClient.ts  index.ts  video.ts
yt_assistant_client/src/api/endpoints/: account.test.ts  account.ts
yt_assistant_client/src/components/QAChat/: QAChat.tsx  index.ts
yt_assistant_client/src/components/Summary/: Summary.tsx
yt_assistant_client/src/components/USER/: DropdownPanel.tsx  LoginButton.tsx  UserButton.tsx
yt_assistant_client/src/components/User/: UserButton.test.tsx  UserButton.tsx  UserButtonDropdown.tsx  UserButtonLogout.test.tsx  UserButtonLogout.tsx  UserButtonThemeSwitcher.tsx  UserLoginButton.tsx  index.ts
yt_assistant_client/src/components/Video/: Video.tsx  VideoForm.tsx  VideoList.tsx  VideoPlayer.tsx  index.ts
yt_assistant_client/src/components/auth/: UserButton.tsx  UserButtonDropdown.tsx  UserButtonLogout.tsx  UserButtonThemeSwitcher.tsx
yt_assistant_client/src/hooks/: index.ts  useThemeStore.ts  useUserData.ts  useUserStore.ts  useVideoStore.ts
yt_assistant_client/src/interfaces/: User.ts
yt_assistant_client/src/store/: index.ts  themeStore.ts  userStore.ts  videoStore.ts
yt_assistant_client/src/test-utils/data/: endpointAccount.ts  index.ts  user.ts
yt_assistant_client/src/types/: User.ts  Video.ts  index.ts  theme.ts
yt_assistant_client/src/utils/: index.ts  logger.ts  youtube.ts
yt_assistant_client/tests/__mocks__/: userStore.ts
yt_assistant_db/: Dockerfile.db.local  init_db.sh  init_schema.sql  readme.md  seed_dev.sql
