[tool.poetry]
package-mode = false
name = "yt-assistant-api"
version = "0.1.0"
description = "YT-Assistant API"
authors = ["vm1828 <vm18281828@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
python-dotenv = ">=1.1.0,<2.0.0"
uvicorn = ">=0.34.2,<0.35.0"
sqlalchemy = "^2.0.40"
authlib = "^1.5.2"
httpx = "^0.28.1"
psycopg2 = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
